# Chimaera

gem5/: .gitignore  compile_commands.json
gem5/configs/custom/: x86-ubuntu-simple.py
gem5/include/gem5/: m5ops.h
gem5/include/gem5/asm/generic/: m5ops.h
gem5/src/chimaera/: SConscript  util.cc  util.hh
gem5/src/sim/: pseudo_inst.cc  pseudo_inst.hh
gem5_binaries/m5op_test/: .gitignore  Makefile  main.c  main.cpp
gem5_utils/: edit_disk.sh
host_bridge/: README.md  compile_commands.json
host_bridge/src/chimaera_bridge/: CMakeLists.txt  package.xml
host_bridge/src/chimaera_bridge/src/: chimaera_host_bridge.cpp  g2h_bridge.cpp  h2g_bridge.cpp
mock_data_drain/: Makefile  README.md  main.cpp
mock_data_source/: README.md  main.cpp
notes/: gem5ops.md
ros/: .gitignore
ros/franka_ws/: compile_commands.json
ros/franka_ws/src/franka_fr3_moveit_config/config/: ompl_planning.yaml
ros/franka_ws/src/franka_fr3_moveit_config/launch/: moveit.launch.py
ros/franka_ws/src/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
ros/franka_ws/src/franka_moveit_examples/: CMakeLists.txt  README.md  package.xml
ros/franka_ws/src/franka_moveit_examples/config/: fr3_gazebo_trajectory_controller.yaml
ros/franka_ws/src/franka_moveit_examples/launch/: gazebo_point_to_point_demo.launch.py  point_to_point_demo.launch.py
ros/franka_ws/src/franka_moveit_examples/src/: point_to_point_demo.cpp
ros/ros_gz_sample_sync_ws/src/ros_gz_sample_sync/: README.md
ros/ros_gz_sample_sync_ws/src/ros_gz_sample_sync/ros_gz_example_application/: CMakeLists.txt  package.xml
ros/ros_gz_sample_sync_ws/src/ros_gz_sample_sync/ros_gz_example_application/launch/: distance_controller.launch.py
ros/ros_gz_sample_sync_ws/src/ros_gz_sample_sync/ros_gz_example_application/ros_gz_example_application/: distance_controller.py
ros/ros_gz_sample_sync_ws/src/ros_gz_sample_sync/ros_gz_example_bringup/launch/: diff_drive.launch.py
