<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_moveit_examples</name>
  <version>0.1.0</version>
  <description>Sample MoveIt point-to-point motion demo for the simulated Franka FR3 arm.</description>

  <maintainer email="support@example.com">Workspace Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>

  <exec_depend>franka_fr3_moveit_config</exec_depend>
  <exec_depend>franka_gazebo_bringup</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
